@startuml
title Aircraft War - Core Architecture

skinparam packageStyle rectangle

package "aircraftwar.application" {
  class Main
  abstract class GamePanel
  class EasyGame
  class NormalGame
  class HardGame
  class DifficultyMenu
  class LeaderboardUI
  class ImageManager
  class AudioManager
  class HeroController
}

package "aircraftwar.basic" {
  abstract class AbstractFlyingObject
}

package "aircraftwar.aircraft" {
  abstract class AbstractAircraft
  class HeroAircraft
  class MobEnemy
  class EliteEnemy
  class ElitePlusEnemy
  class EliteProEnemy
  class BossEnemy
  interface IEnemyFactory
}

package "aircraftwar.bullet" {
  abstract class BaseBullet
  class HeroBullet
  class EnemyBullet
}

package "aircraftwar.prop" {
  interface IProp
  interface IPropObserver
  abstract class BaseProp
  abstract class AbstractProp
  class BloodProp
  class BulletProp
  class BulletPlusProp
  class FreezeProp
  class BombProp
  class PropFactory
}

package "aircraftwar.strategy" {
  interface IShootStrategy
  class ShootContext
  class StraightShootStrategy
  class SpreadShootStrategy
  class CircleShootStrategy
}

package "aircraftwar.dao" {
  interface ScoreDAO
  class ScoreDAOImpl
  class ScoreRecord
}

Main --> DifficultyMenu
DifficultyMenu --> GamePanel
GamePanel <|-- EasyGame
GamePanel <|-- NormalGame
GamePanel <|-- HardGame
GamePanel --> HeroAircraft
GamePanel --> AbstractAircraft
GamePanel --> BaseBullet
GamePanel --> IProp
GamePanel --> ScoreDAOImpl
GamePanel --> LeaderboardUI
GamePanel --> AudioManager

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseProp
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

IProp <|.. BaseProp
BaseProp <|-- AbstractProp
BaseProp <|-- BloodProp
BaseProp <|-- BulletProp
BaseProp <|-- BulletPlusProp
AbstractProp <|-- FreezeProp
AbstractProp <|-- BombProp

AbstractAircraft ..|> IPropObserver
EnemyBullet ..|> IPropObserver

HeroAircraft --> ShootContext
ShootContext --> IShootStrategy
IShootStrategy <|.. StraightShootStrategy
IShootStrategy <|.. SpreadShootStrategy
IShootStrategy <|.. CircleShootStrategy

ScoreDAO <|.. ScoreDAOImpl
ScoreDAOImpl --> ScoreRecord
@enduml
